2002-05-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl (cat): Fixed bug #556504, reported by Michael
	  A. Cleverly <cleverly@users.sourceforge.net>. The fix was
	  provided by Michael too. The problem was reading files which are
	  reported as size 0, but actually have content, just dynamically
	  generated (Linux /proc is an example of an fs containing such
	  files).

2002-05-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Documented the two new commands (stripN,
	  stripPwd).

	* fileutil.tcl: Made up my mind about SF Bug #462015. The proposed
	  interface change to [find] is rejected to keep the interface of
	  the library procedure simple and without hidden surprises =
	  KISS. Added a command [stripPwd] instead which can be used by
	  the caller of [find] to make the returned paths relative to the
	  current working directory. Also added [stripN] to strip a fixed
	  number of elements from the beginning of a path.

2002-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Added doctools manpage.
	* fileutils.n: Updated to reflect change of version.

2002-03-20  eric melski  <ericm@ajubasolutions.com>

	* Bumped version to 1.4
	
	* fileutil.n:
	* fileutil.test:
	* fileutil.tcl: Added fileType command posted to comp.lang.tcl by
	  Phil Ehrens, with some minor modifications.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.3

2001-12-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Restricted tests 2.2 and 2.3 to the directory
	  structure created for the test and not the whole directory the
	  test is run in. Bugfix for item #486572.

2001-11-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test:
	* fileutil.n:
	* fileutil.tcl: Applied patch #477805 by Glenn Jackman
	  <glennjnn@users.sourceforge.net> implementing the unix 'touch'