@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: fileutil.tcl,v 1.14 2002/05/21 17:44:41 andreas_kupries Exp $
+# RCS: @(#) $Id: fileutil.tcl,v 1.15 2002/10/10 02:39:45 andreas_kupries Exp $
 
 package require Tcl 8
 package require cmdline
@@ -473,12 +473,15 @@ proc ::fileutil::touch {args} {
 #                       text
 #                       script <interpreter>
 #                       executable elf
-#                       graphic gif
-#                       graphic jpeg
+#                       binary graphic [gif, jpeg, png, tiff]
+#                       ps, eps, pdf
 #                       html
 #                       xml <doctype>
 #                       message pgp
+#                       bzip, gzip
+#                       gravity_wave_data_frame
 #                       link
+#                  
 
 
 proc ::fileutil::fileType {filename} {
@@ -526,14 +529,29 @@ proc ::fileutil::fileType {filename} {
     }
     if { [ regexp {^\#\!(\S+)} $test -> terp ] } {
         lappend type script $terp
-    } elseif { $binary && [ regexp -nocase {ELF} $test ] } {
+    } elseif { $binary && [ regexp {^[\x7F]ELF} $test ] } {
         lappend type executable elf
-    } elseif { $binary && [ regexp -nocase {GIF} $test ] } {
+    } elseif { $binary && [ regexp {^BZh91AY\&SY} $test ] } {
+        lappend type compressed bzip
+    } elseif { $binary && [ regexp {^\x1f\x8b} $test ] } {
+        lappend type compressed gzip
+    } elseif { $binary && [ regexp {^GIF} $test ] } {
         lappend type graphic gif
-    } elseif { $binary && [ regexp -nocase {JFIF} $test ] } {
+    } elseif { $binary && [ regexp {^\x89PNG} $test ] } {
+        lappend type graphic png
+    } elseif { $binary && [ regexp {^\xFF\xD8\xFF\xE0\x00\x10JFIF} $test ] } {
         lappend type graphic jpeg
+    } elseif { $binary && [ regexp {^MM\x00\*} $test ] } {
+        lappend type graphic tiff
+    } elseif { $binary && [ regexp {^\%PDF\-} $test ] } {
+        lappend type pdf
     } elseif { ! $binary && [ regexp -nocase {\<html\>} $test ] } {
         lappend type html
+    } elseif { [ regexp {^\%\!PS\-} $test ] } {
+       lappend type ps
+       if { [ regexp { EPSF\-} $test ] } {
+           lappend type eps
+       }
     } elseif { [ regexp -nocase {\<\?xml} $test ] } {
         lappend type xml
         if { [ regexp -nocase {\<\!DOCTYPE\s+(\S+)} $test -> doctype ] } {
@@ -541,7 +559,9 @@ proc ::fileutil::fileType {filename} {
         }
     } elseif { [ regexp {BEGIN PGP MESSAGE} $test ] } {
         lappend type message pgp
-    }
+    } elseif { $binary && [ regexp {^IGWD} $test ] } {
+        lappend type gravity_wave_data_frame
+    }    
     ;## lastly, is it a link?
     if { ! [ catch {file readlink $filename} ] } {
         lappend type link
